--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,25 +1,18 @@
-* {
-box-sizing: border-box;
-margin: 0;
-padding: 0;
-}
-
 html{
-    font-size: 62.5%;
     text-align: center;
 }
-.container {
-    width: 70%;
-    height: 30vh;
-    margin: 0 auto;
-    border: 1px dotted black;
-    padding: 1em;
-}
-.blog {
-    color:blue;
+body {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 }
+
+.container {
+    margin: 0 auto;
+    border: 1px dotted black;
+    width: 70vw;
+    height: 30vh;
+}
 .texto {
-    font-size: 1.6rem;
+    color: blue;
     text-transform: capitalize;
 }
