--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@ html{
     text-align: center;
 }
 body {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Courier New', Courier, monospace;
 
 }
 
