--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@ html{
     text-align: center;
 }
 body {
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Arial, Helvetica, sans-serif;
 
 }
 
