--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,7 +5,13 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 
 }
-
+a {
+    text-decoration: none;
+}
+p {
+    text-align: left;
+    padding: 0 1rem;
+}
 .container {
     margin: 0 auto;
     border: 1px dotted black;
@@ -29,4 +35,9 @@ body {
 }
 .cabecera h1 {
     font-weight: 600;
+}
+
+.text-footer {
+    padding: 0.5rem;
+    background-color: grey;
 }
