--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,7 +5,18 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 
 }
+.body {
+    background-color: aqua;
 
+}
+.bold {
+    font-weight: 700;
+}
+.logo {
+    height: 4rem;
+    border-radius: 1rem;
+
+}
 .container {
     margin: 0 auto;
     border: 1px dotted black;
@@ -29,4 +40,5 @@ body {
 }
 .cabecera h1 {
     font-weight: 600;
+    align-content: center;
 }
